# mail-mock

./: .gitignore  LICENSE  README.md  pyproject.toml
mail_mock/: __init__.py  api.py  cli.py  dashboard.py  forwarder.py  parser.py  smtp_server.py  storage.py
mail_mock/templates/: inbox.html
