[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mail-mock"
version = "1.0.0"
description = "Local SMTP server to capture, inspect, and test emails during development."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "mail-mock contributors"}]
keywords = ["smtp", "email", "testing", "development", "mock"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Email",
]
dependencies = [
    "click>=8.0",
    "aiosmtpd>=1.4",
    "flask>=3.0",
]

[project.scripts]
mail-mock = "mail_mock.cli:cli"

[tool.setuptools.packages.find]
include = ["mail_mock*"]

[tool.setuptools.package-data]
mail_mock = ["templates/*.html"]
